# makoto

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  error.rs  logging.rs  main.rs  state.rs
src-tauri/src/model/: activation.rs  day.rs  day_time.rs  mod.rs  partition.rs  tag.rs  time.rs
src-tauri/src/model/day_time/: day.rs  mod.rs
src-tauri/src/model/partition/: activation_modifier.rs  activation_operator.rs  activation_query.rs  mod.rs
src-tauri/src/state/: config.rs  data.rs  mod.rs  tag.rs
src/backend/: activation.ts  calendarInfo.ts  commands.ts  config.ts  data.ts  error.ts  state.ts  tag.ts  utils.ts
src/backend/api/: commands.ts  error.ts
src/backend/helpers/: conversions.ts
src/backend/model/: activation.ts  commands.ts  config.ts  dayTime.ts  partition.ts  tag.ts  (+1 more)
src/components/: CalendarCell.tsx  CalendarDay.tsx  CalendarViewControls.tsx  ErrorLogProvider.tsx  MakotoStateLoader.tsx  MakotoStateProvider.tsx  PartitionBuilder.tsx  Sidebar.tsx
src/context/: ErrorLog.ts  ErrorLogProvider.tsx  MakotoStateContext.ts  MakotoStateProvider.tsx
src/contexts/: CalendarInfoContext.tsx  ErrorLog.ts  MakotoStateContext.ts  StateContext.ts
src/lib/: calendarInfo.ts  conversions.ts  parse.ts  utils.ts
src/model/: calendarInfo.ts  dayTime.ts
src/pages/: Calendar.tsx  CalendarView.tsx
src/views/: CalendarView.tsx
(+13 files in other folders)
