[package]
name = "makoto"
version = "0.0.0"
description = "A Tauri App"
authors = ["declspecl"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.8.0", features = ["window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0.63"
toml_edit = { version = "0.22.20", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
